--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">112-4X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">112-47-250</p>         
       </div>
    </div>
    <hr></div>
@@ -7622,9 +7622,9 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <tr>
 <td>11/12/2023<br>to<br>17/12/2023</td>
       
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="">1<br>1<br>2</td>
+<td class="">47</td>
+<td class="">2<br>5<br>0</td>
 
 <td class="">*<br>*<br>*</td>
 <td class="">**</td>
@@ -7675,7 +7675,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">112-4X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">112-47-250</p>         
       </div>
    </div>
    <hr></div>
