--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">790-6X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">790-67-458</p>         
       </div>
    </div>
    <hr></div>
@@ -7653,9 +7653,9 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 </tr><tr>
 <td>18/12/2023<br>to<br>24/12/2023</td>
       
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="">7<br>9<br>0</td>
+<td class="">67</td>
+<td class="">4<br>5<br>8</td>
 
 <td class="">*<br>*<br>*</td>
 <td class="">**</td>
@@ -7706,7 +7706,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">790-6X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">790-67-458</p>         
       </div>
    </div>
    <hr></div>
