--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">334-04-257</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">145-09-270</p>         
       </div>
    </div>
    <hr></div>
@@ -7681,6 +7681,37 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">93</td>
 <td class="">2<br>5<br>6</td>
 	
+</tr><tr>
+<td>25/10/2023<br>to<br>31/11/2023</td>
+      
+<td class="r">3<br>4<br>8</td>
+<td class="r">50</td>
+<td class="r">5<br>7<br>8</td>
+
+<td class="">1<br>4<br>5</td>
+<td class="">09</td>
+<td class="">2<br>7<br>0</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+	
 </tr></tbody>
 </table>
 			
@@ -7706,7 +7737,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">334-04-257</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">145-09-270</p>         
       </div>
    </div>
    <hr></div>
