--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">560-19-289</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">236-17-458</p>         
       </div>
    </div>
    <hr></div>
@@ -7704,6 +7704,37 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">19</td>
 <td class="">2<br>8<br>9</td>
 
+<td class="">8<br>9<br>0</td>
+<td class="">73</td>
+<td class="">5<br>9<br>9</td>
+
+<td class="">1<br>2<br>7</td>
+<td class="">02</td>
+<td class="">5<br>8<br>9</td>
+	
+</tr><tr>
+<td>01/01/2024<br>to<br>01/01/2024</td>
+      
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">7<br>8<br>0</td>
+<td class="">58</td>
+<td class="">2<br>2<br>4</td>
+
+<td class="">2<br>3<br>6</td>
+<td class="">17</td>
+<td class="">4<br>5<br>8</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
 <td class="">*<br>*<br>*</td>
 <td class="">**</td>
 <td class="">*<br>*<br>*</td>
@@ -7737,7 +7768,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">560-19-289</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">236-17-458</p>         
       </div>
    </div>
    <hr></div>
